--- a/package.json
+++ b/package.json
@@ -4,11 +4,24 @@
   "description": "Plan Events with Freinds",
   "main": "index.js",
   "scripts": {
+    "start": "ts-node -T backend/src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.1.0"
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
+    "morgan": "^1.10.1",
+    "swagger-ui-express": "^5.0.1",
+    "ts-node": "^10.9.2",
+    "yaml": "^2.8.1"
+  },
+  "devDependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/morgan": "^1.9.10",
+    "@types/swagger-ui-express": "^4.1.8",
+    "@types/yaml": "^1.9.7",
+    "typescript": "^5.9.2"
   }
 }
