--- a/package.json
+++ b/package.json
@@ -5,13 +5,14 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node -T backend/src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "jest": "^30.0.5",
     "morgan": "^1.10.1",
     "swagger-ui-express": "^5.0.1",
     "ts-node": "^10.9.2",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/jest": "^30.0.0",
     "@types/morgan": "^1.9.10",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/yaml": "^1.9.7",
