--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node -T src/server.ts",
+    "start-dev": "ts-node-dev -T src/server.ts",
     "test": "jest --detectOpenHandles"
   },
   "author": "",
@@ -12,12 +13,15 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "swagger-ui-express": "^5.0.1",
     "sync-curl": "^1.1.0",
     "sync-request-curl": "^3.3.3",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "validator": "^13.15.15",
     "yaml": "^2.8.1"
   },
