--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: 20.13 # Test on multiple Node versions if you want
+        node-version: [20.13] # Test on multiple Node versions if you want
 
     steps:
       - name: Checkout code
