--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,7 +3,7 @@ name: CI Tests
 on:
   pull_request:
     branches:
-      - main   # Run on PRs into main
+      - main   
  
 jobs:
   test:
@@ -11,7 +11,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [20.13] # Test on multiple Node versions if you want
+        node-version: [20.13]
 
     steps:
       - name: Checkout code
@@ -21,10 +21,10 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ matrix.node-version }}
-          cache: 'npm'   # cache dependencies for faster runs
+          cache: 'npm'   
 
       - name: Install dependencies
-        run: npm ci   # clean install based on package-lock.json
+        run: npm install
 
       - name: Run tests
         run: npm test
