--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "swagger-ui-express": "^5.0.1",
     "sync-curl": "^1.1.0",
@@ -35,6 +36,7 @@
     "@types/eslint": "^9.6.1",
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/mongoose": "^5.11.97",
     "@types/morgan": "^1.9.10",
     "@types/swagger-ui-express": "^4.1.8",
     "@types/validator": "^13.15.2",
