--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           JWT_REFRESH_SECRET: ${{ secrets.JWT_REFRESH_SECRET }}
           INVITATION_SECRET: ${{ secrets.JWT_INVITATION_SECRET }}
+          MONGOOSE: ${{ secrets.MONGOOSE }}
         run: |
           npm start &
           SERVER_PID=$!
