--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,22 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
+    # Define a service container for MongoDB
+    services:
+      mongodb:
+        # Use the official MongoDB Docker image
+        image: mongo:latest
+        # Map port 27017 inside the container
+        ports:
+          - 27017:27017
+        # Define environment variables if needed (e.g., for auth)
+        options: >-
+          --name mongodb_server
+          --health-cmd "mongo --eval 'db.runCommand({ping: 1})'"
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
     container:
       image: node:20
 
@@ -32,7 +48,7 @@ jobs:
           JWT_SECRET: ${{ secrets.JWT_SECRET }}
           JWT_REFRESH_SECRET: ${{ secrets.JWT_REFRESH_SECRET }}
           INVITATION_SECRET: ${{ secrets.JWT_INVITATION_SECRET }}
-          MONGOOSE: ${{ secrets.MONGOOSE }}
+          MONGODB_URI: mongodb://mongo_ci:27017/ci_database_name
         run: |
           npm start &
           SERVER_PID=$!
